# Falling-Fury

./: .gitignore  CMakeLists-native.txt  CMakeLists.txt  FallingFury.data  Game.cpp  Game.h  README.md  build.sh  main.cpp
.github/workflows/: cmake-single-platform.yml  pages.yml
Extra/: Person.cpp
apps/native/include/core/: Game.h  GameState.h  PlayingState.h
apps/native/include/entities/: Enemy.h
apps/native/include/managers/: ScoreManager.h  SoundManager.h
apps/native/src/core/: Game.cpp  main.cpp
apps/web/site/: FallingFuryWasm.data  FallingFuryWasm.js  FallingFuryWasm.wasm  game.js  index.html  styles.css
build-wasm/: FallingFuryWasm.js  FallingFuryWasm.wasm
database/: data.txt
docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  REORGANIZATION.md  TRANSFORMATION_SUMMARY.md
emscripten_sfml/include/SFML/: Config.hpp  OpenGL.hpp
emscripten_sfml/include/SFML/Graphics/: RenderTarget.hpp  Shader.hpp
emscripten_sfml/include/SFML/System/: String.hpp  String.hpp.bak
emscripten_sfml/include/SFML/Window/: WindowHandle.hpp
include/managers/: ResourceManager.h  ScoreManager.h
include/systems/: ObjectPool.h  ParticleSystem.h
include/ui/: UI.h
scripts/: build.sh  build_web.sh
src/core/: Game.cpp  main.cpp
web/: index.html  styles.css
